[tool.poetry]
name = "tit"
version = "0.1.0"
description = ""
authors = ["Prakash4844 <pk484442@gmail.com>"]
readme = "README.md"
packages = [{include = "tit"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.5.2"
shellingham = "^1.5.0.post1"
pytest = "^7.4.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
